--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "reactlab",
   "private": true,
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "nginx-conf": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
